--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+<title>Streampunk Media</title>
 <body>
 <p></p><img src="sign.png" alt="Streampunk Media" width="100%"/></p>
 <p><code>Streampunk Media <a href="mailto:furnace@streampunk.media>furnace@streampunk.media</a></code></p>
