--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <title>Streampunk Media</title>
 <body>
 <p></p><img src="sign.png" alt="Streampunk Media" width="100%"/></p>
-<p><code>Streampunk Media <a href="mailto:furnace@streampunk.media>furnace@streampunk.media</a></code></p>
+<p><code>Streampunk Media <a href="mailto:furnace@streampunk.media">furnace@streampunk.media</a></code></p>
 </body>
 </html>
