--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
+<head>
 <title>Streampunk Media</title>
+</head>
 <body>
 <p></p><img src="sign.png" alt="Streampunk Media" width="100%"/></p>
 <p><code>Streampunk Media <a href="mailto:furnace@streampunk.media">furnace@streampunk.media</a> 
