--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <html>
+<style>
+.twtr-widget {
+text-align: center;
+}
+.twtr-doc {
+text-align: left;
+margin: auto;
+}
+</style>
 <head>
 <title>Streampunk Media</title>
 </head>
 <body>
-<p></p><img src="sign.png" alt="Streampunk Media" width="100%"/></p>
+<p></p><img src="sign2.png" alt="Streampunk Media" width="100%"/></p>
 <a class="twitter-timeline" href="https://twitter.com/StrmPunkd" data-widget-id="671456902455427072">Tweets by @StrmPunkd</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 <p><code>Streampunk Media <a href="mailto:furnace@streampunk.media">furnace@streampunk.media</a>
