--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <style>
-.twitter-timeline {
+.twitter-widget {
 text-align: center;
 }
 .twtr-doc {
@@ -13,8 +13,10 @@ margin: auto;
 </head>
 <body>
 <p></p><img src="sign2.png" alt="Streampunk Media" width="100%"/></p>
-<a class="twitter-timeline" href="https://twitter.com/StrmPunkd" data-widget-id="671456902455427072">Tweets by @StrmPunkd</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<div class="twitter-widget">
+  <a class="twitter-timeline" href="https://twitter.com/StrmPunkd" data-widget-id="671456902455427072">Tweets by @StrmPunkd</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</div>
 <p><code>Streampunk Media <a href="mailto:furnace@streampunk.media">furnace@streampunk.media</a>
 <a href="https://twitter.com/StrmPunkd">@StrmPunkd</a></code></p>
 </body>
