--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 .twitter-widget {
 text-align: center;
 }
-.twtr-doc {
+.twitter-doc {
 text-align: left;
 margin: auto;
 }
@@ -13,7 +13,7 @@ margin: auto;
 </head>
 <body>
 <p></p><img src="sign2.png" alt="Streampunk Media" width="100%"/></p>
-<div class="twitter-widget">
+<div class="twitter-widget twitter-doc">
   <a class="twitter-timeline" href="https://twitter.com/StrmPunkd" data-widget-id="671456902455427072">Tweets by @StrmPunkd</a>
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
