--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ margin: auto;
 </style>
 <head>
 <title>Streampunk Media</title>
+<meta name="google-site-verification" content="a0XiTTv5Vj9e-4ILgs6VE1OddWlveXFNnP7pdC5kGSE" />
 </head>
 <body>
 <p></p><img src="sign2.png" alt="Streampunk Media" width="100%"/></p>
