Minor updates tweaking layout anf format.

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 </head>
 <body class="c32">
 <table class="c15"><tbody><tr class="c18">
-<td class="c35" colspan="1" rowspan="1"><p><span style="overflow: hidden; align: left; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 300.00px; height: 160.00px;"><img alt="banner.png" src="images-home/image01.png" style="width: 300.00px; height: 160.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""></span></p>
-</td>
 <!-- <td class="c8" colspan="1" rowspan="1"><p class="c10 c14 c29"><span class="c3"></span></p></td> -->
 <td class="c39" colspan="1" rowspan="1">
   <p class="c10 c17">
-      <span class="c0">Introducing Streampunk Media</span></p>
+      <span class="c0">Streampunk Media</span></p>
   <p class="c10 c17"><span class="c6">Streampunk Media Ltd is a brand new media technology company with a
     big ambition and vision - to democratize content production with commodity infrastructure. We want to
     enable professional media production in and for the web, personalising content delivery using the same
     technology platform as Google, Amazon, IBM etc..</span></p>
+</td>
+<td class="c35" colspan="1" rowspan="1"><p>&nbsp;&nbsp;&nbsp;&nbsp;<span style="overflow: hidden; align: center; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 300.00px; height: 160.00px;"><img alt="banner.png" src="images-home/image01.png" style="width: 300.00px; height: 160.00px; align: center; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""></span></p>
 </td>
 </tr></tbody></table>
 <table class="c15"><tbody><tr class="c18">
@@ -34,10 +34,10 @@
   services to content producers that transform how they work, with capabilities not limited by locations,
   formats and hierarchies. &nbsp;The founders of Streampunk Media are experienced media &amp; technology
   professionals who understand:</span></p>
-<ul class="c1 lst-kix_yhgsn7n2f5bl-0 start">
+<ul class="c1 start"> <!-- lst-kix_yhgsn7n2f5bl-0 -->
 <li class="c21 c10"><span class="c3">today&rsquo;s signals (SDI, ASI), file formats (MXF, MOV, WAV), streaming, editing and timing;</span></li>
 <li class="c10 c21"><span class="c3">the Internet, the web platform, cloud, data centre, how to make it fast and how it scales;</span></li>
-<li class="c21 c10"><span class="c3">emerging IP-based standards for media transport (TR-03, AIMS, ASPEN, MPEG-DASH) &amp; discovery (NMOS).</span></li>
+<li class="c21 c10"><span class="c3">emerging IP-based standards for media transport (TR-03, AIMS, ASPEN, MPEG-DASH) and discovery (NMOS).</span></li>
 </ul>
 </td>
 </tr></tbody></table>
@@ -55,7 +55,7 @@
 <td class="c31" colspan="1" rowspan="1">
 <p class="c13 c10"><span class="c9 c6">Rolling up our sleeves</span></p>
 <p class="c13 c10"><span class="c3">Our software is free to use and open for extension by anyone. Our services include:</span></p>
-<ul class="c1 lst-kix_cg3z5sbd8ni4-0 start">
+<ul class="c1 start"> <!-- lst-kix_cg3z5sbd8ni4-0 -->
 <li class="c4"><span class="c3">Independent advice and design service for implementing IP or IT solutions, reducing risk through education, research, prototyping and measurement;</span></li>
 <li class="c4"><span class="c3">Software support, deployment and priority development of additional capabilities into the platform;</span></li>
 <li class="c4"><span class="c6">Provisioning media infrastructure and capabilities on demand and on a pay-as-you-go basis.</span></li>
