Adding big data after IoT - went down well at NAB.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <td class="c19" colspan="1" rowspan="1">
 <p class="c13 c10"><span class="c20 c6 c27">Dynamorse</span></p>
 <p class="c13 c10"><span class="c6">IT/IP swiss-army knife - a ground-up, open-source implementation of the
-  <a href="http://www.jt-nm.org/RA-1.0/index.shtml">JT-NM Reference Architecture<a>, bringing IoT concepts to professional media. From laptops to cloud, draw
+  <a href="http://www.jt-nm.org/RA-1.0/index.shtml">JT-NM Reference Architecture<a>, bringing IoT and big data concepts to professional media. From laptops to cloud, draw
   infrastructure in browsers, then dynamically deploy and monitor it. Platform exploits reactive Internet
   technology to stream and transform SDI, RTP TR-03/AIMS, RTP ASPEN/TS, HTTP, WebRTC and files.</span></p>
 </td>
