Adding links to other collateral.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
 </td>
 </tr></tbody></table>
 <p class="c10 c14"><span class="c6 c20"></span></p>
+<p class="c10 c28"><span class="c20 c6">Read all about it ...</span></p>
+<ul class="c1 start"> <!-- lst-kix_cg3z5sbd8ni4-0 -->
+<li class="c4"><span class="c3">Broadcast Bridge article <a href="https://www.thebroadcastbridge.com/content/entry/5718/ip-or-it-democratizing-content-production-with-commodity-infrastructure">IP or IT? Democratizing content production with commodity infrastructure</a>;</span></li>
+<li class="c4"><span class="c3">NAB 2016 <a href="IPorITStand.pdf">presentation</a> and <a href="SPM_NAB16_handout.pdf">handout</a>;</span></li>
+<li class="c4"><span class="c3"><a href="https://github.com/Streampunk">Streampunk Media on GitHub</a>.</span></li>
+</ul>
+<p class="c10 c14"><span class="c6 c20"></span></p>
 <p class="c10 c28"><span class="c20 c6">Prototypes in development ...</span></p>
 <a id="t.af4acb3355f37049b4687f6a2128bb6aeadaee56"></a><a id="t.3"></a><table class="c15"><tbody><tr class="c18">
 <td class="c19" colspan="1" rowspan="1">
